--- a/src/components/margin-agreement/MarginAgreementList.css
+++ b/src/components/margin-agreement/MarginAgreementList.css
@@ -288,3 +288,72 @@
     padding: 10px;
     cursor: pointer;
 }
+
+
+/*- Menu Tabs 14--------------------------- */
+.tabs14 {
+    font: bold 11px/1.5em Verdana;
+    display: inline-flex;
+    float:left;
+    width:100%;
+    background:#EDEDED;
+    font-size:93%;
+    line-height:normal;
+    background:url("/images/reconcile/ReconTab_Shown.png") no-repeat right top;
+}
+.tabs14 ul {
+    margin:0;
+    padding:10px 10px 0 50px;
+    list-style:none;
+}
+.tabs14 li {
+    display:inline;
+    margin:0;
+    padding:0;
+}
+.tabs14 a {
+    float:left;
+    background:url("/images/reconcile/ReconTab_Shown.png") no-repeat left top;
+    margin:0;
+    padding:0 0 0 4px;
+    text-decoration:none;
+}
+.tabs14 a span {
+    float:left;
+    display:block;
+    background:url("/images/reconcile/ReconTab_Hidden.png") no-repeat right top;
+    padding:5px 15px 4px 6px;
+    color:#666;
+}
+/* Commented Backslash Hack hides rule from IE5-Mac \*/
+.tabs14 a span {float:none;}
+/* End IE5-Mac hack */
+.tabs14 a:hover span {
+    color:#000;
+}
+.tabs14 a:hover {
+    background-position:0% -42px;
+}
+.tabs14 a:hover span {
+    background-position:100% -42px;
+}
+
+.tabItem{
+    margin-bottom: 0px;
+    margin-top: 0px;
+}
+
+.inputBox{
+    width: 300px;
+}
+
+.columnleft{
+    display: flex;
+    align-content: flex-start;
+    flex: 3;
+    padding: 3px 0;
+}
+
+.disputeSectionText{
+    margin-top: 12px;
+}
