--- a/src/components/pledge-selection/Selection.css
+++ b/src/components/pledge-selection/Selection.css
@@ -1,7 +1,10 @@
+@value newAcuoBlue from '../../static/css-components/colors.css';
+@value acuoGrey from '../../static/css-components/colors.css';
+
 .panel {
   position: relative;
   margin: 10px 0 25px 0;
-  padding: 10px;
+  padding: 15px 0;
   background-color: #fff;
   border: 1px solid #dedede;
   -webkit-border-radius: 10px;
@@ -11,11 +14,17 @@
 }
 
 .panelTitle {
-  font-weight: bold;
+  composes: baseFontBold from '../../static/css-components/fonts.css';
   font-size: 20px;
   line-height: 24px;
   text-transform: uppercase;
-  color: #6389ad;
+  color: newAcuoBlue;
+  margin-left: 10px;
+}
+
+.subtitle{
+  color: acuoGrey;
+  font-size: 10px;
 }
 
 .columnContainer{
@@ -24,10 +33,24 @@
 
 .leftColumn {
   flex: 1;
-  flex-grow: 1;
-  border-right: 1px solid black;
+  border-right: 1px solid acuoGrey;
+  padding: 0 15px;
 }
 .rightColumn {
-  flex: 1;
-  flex-grow: 2;
+  flex: 2;
+  padding: 0 15px;
+
+}
+
+.callTitle{
+  font-size: 20px;
+  composes: baseFontBold from '../../static/css-components/fonts.css';
+  padding: 15px 0;
+  color: newAcuoBlue;
+  text-transform: uppercase;
+}
+
+/* group component */
+.group{
+  border-bottom: 1px solid acuoGrey;
 }
