--- a/src/components/pledge-selection/Selection.css
+++ b/src/components/pledge-selection/Selection.css
@@ -53,7 +53,11 @@
 /* group component */
 .group{
   border-bottom: 1px solid acuoGrey;
-  padding: 15px 0 0;
+}
+
+
+.selTick:hover{
+  cursor: pointer;
 }
 
 .firstLevel{
