--- a/src/components/pledge-selection/Selection.css
+++ b/src/components/pledge-selection/Selection.css
@@ -15,15 +15,15 @@
 
 .panelTitle {
   composes: baseFontBold from '../../static/css-components/fonts.css';
-  font-size: 20px;
-  line-height: 24px;
+  font-size: 18px;
+  line-height: 20px;
   text-transform: uppercase;
   color: newAcuoBlue;
   margin-left: 10px;
 }
 
 .subtitle{
-  color: acuoGrey;
+  color: #4A4A4A;
   font-size: 10px;
 }
 
@@ -31,10 +31,13 @@
   display: flex;
 }
 
+
 .leftColumn {
   flex: 1;
-  border-right: 1px solid acuoGrey;
+  border-right: 1px solid rgba(74,74,74,0.4);
   padding: 0 15px;
+  color: #4A4A4A;
+  font-size: 13px;
 }
 .rightColumn {
   flex: 2;
@@ -42,17 +45,26 @@
 
 }
 
+.leftColumn.small{
+  flex: 1;
+}
+.leftColumn.big{
+  flex: 2;
+}
+
 .callTitle{
-  font-size: 20px;
+  font-size: 18px;
   composes: baseFontBold from '../../static/css-components/fonts.css';
   padding: 15px 0 0;
   color: newAcuoBlue;
   text-transform: uppercase;
+  line-height: 22px;
 }
 
 /* group component */
 .group{
-  border-bottom: 1px solid acuoGrey;
+  border-bottom: 1px solid rgba(74,74,74,0.4);
+  padding: 10px 0px;
 }
 
 
@@ -62,7 +74,7 @@
 
 .firstLevel{
   display: flex;
-  padding-bottom: 15px;
+  padding: 8px 0px;
 }
 
 .assetName {
