--- a/src/components/margin-agreement/MarginAgreementList.css
+++ b/src/components/margin-agreement/MarginAgreementList.css
@@ -27,6 +27,7 @@
     margin-top: 25px;
     margin-bottom: 50px;
     /*border: 1px dotted #00f;*/
+    padding-top: 50px;
 }
 
 .actionWrap .actPanel{
@@ -163,8 +164,7 @@
 
 .packageRowHighLight{
   color: #000;
-  background-color:#D0021B;
-  opacity: .3;
+  background-color:#ffb7b7;
 }
 
 .packageRow{
@@ -253,7 +253,7 @@
   display: none;
   text-align: left;
   color: #9b9b9b;
-  float: left;
+  float: right;
   position: absolute;
   width: 100px;
   -webkit-border-radius: 10px 0 10px 10px;
@@ -300,10 +300,12 @@
     font-size:93%;
     line-height:normal;
     background:url("/images/reconcile/ReconTab_Shown.png") no-repeat right top;
+    position: absolute;
+    top: -10px;
 }
 .tabs14 ul {
     margin:0;
-    padding:10px 10px 0 50px;
+    padding:0px 0px 0 0px;
     list-style:none;
 }
 .tabs14 li {
@@ -311,49 +313,134 @@
     margin:0;
     padding:0;
 }
-.tabs14 a {
-    float:left;
-    background:url("/images/reconcile/ReconTab_Shown.png") no-repeat left top;
-    margin:0;
-    padding:0 0 0 4px;
-    text-decoration:none;
-}
-.tabs14 a span {
-    float:left;
-    display:block;
-    background:url("/images/reconcile/ReconTab_Hidden.png") no-repeat right top;
-    padding:5px 15px 4px 6px;
-    color:#666;
-}
-/* Commented Backslash Hack hides rule from IE5-Mac \*/
-.tabs14 a span {float:none;}
-/* End IE5-Mac hack */
-.tabs14 a:hover span {
-    color:#000;
-}
-.tabs14 a:hover {
-    background-position:0% -42px;
-}
-.tabs14 a:hover span {
-    background-position:100% -42px;
-}
 
 .tabItem{
     margin-bottom: 0px;
     margin-top: 0px;
 }
 
-.inputBox{
-    width: 300px;
+/* styles needed for dispute.js file------------------------------- */
+
+.firstRow{
+    display: flex;
+    width:100%;
+    /*align-content: flex-start;*/
+    clear: both;
+}
+
+.legalEntityContainerDispute{
+    flex:1;
+    flex-grow: 3;
+    /*color:#9b9b9b;*/
+    /*text-align: left;*/
+    /*font-size: 10px;*/
+    /*padding: 10px;*/
+}
+
+.currencyDispute{
+    flex:1;
+    flex-grow: 1;
+    /*section*/
+}
+
+.secondRow{
+    font:13px Helvetica;
+    padding: 0 5px;
+    margin-top: 12px;
+}
+
+.panelDispute{
+    width: 100%;
+    /*display: flex;*/
+    min-height: 437px;
+    overflow: auto;
+    border:1px solid #dedede;
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+    -webkit-box-shadow: 2px 2px 4px 0 #c9c9c9;
+    box-shadow: 2px 2px 4px 0 #c9c9c9;
+}
+
+.sectionRowDispute{
+    /*display:flex;*/
+    padding:7px 14px;
 }
 
 .columnleft{
-    display: flex;
+    width: 200px;
     align-content: flex-start;
-    flex: 3;
+    /*flex: 1;*/
     padding: 3px 0;
+    display: inline-block;
 }
 
-.disputeSectionText{
-    margin-top: 12px;
+.inputBox{
+    width: 300px;
+    display: inline-block;
+    /*flex:2;*/
+}
+
+.usd{
+    display: inline-block;
+    padding-left: 5px;
+}
+
+.buttonContainer{
+    width: 100%;
+}
+.buttonContainer button {
+    float: right;
+    margin: 16px 24px;
+    width: 146px;
+    /*height: 32px;*/
+    color: #4A4A4A ;
+    background-color: #FAFAFA ;
+    border: 1px solid #979797 ;
+    font-size: 13px;
+    font-weight: bold;
+    line-height: 32px;
+    text-align: center;
+    -webkit-border-radius: 20px;
+    border-radius: 20px;
+    margin: 0 20px;
+    align-self: center;
+}
+
+.optButton.btnEnabled {
+    flex: 1;
+    width: 146px;
+    /*height: 32px;*/
+    color: #4A4A4A ;
+    background-color: #FAFAFA ;
+    border: 1px solid #979797 ;
+    font-size: 13px;
+    font-weight: bold;
+    line-height: 32px;
+    text-align: center;
+    -webkit-border-radius: 20px;
+    border-radius: 20px;
+    margin: 0 20px;
+    align-self: center;
+}
+
+.tabButton{
+    display: inline-block;
+    position: relative;
+    padding: 8px 18px;
+    border: 1px solid #dedede;
+    border-bottom: none;
+    -webkit-border-radius: 10px 10px 0 0;
+    border-radius: 10px 10px 0 0;
+    -webkit-box-shadow: 2px 0 4px 0 #c9c9c9;
+    box-shadow: 2px -2px 4px 0 #c9c9c9;
+}
+
+.tabActive{
+    color: #6389AD;
+    background-color: #fff;
+}
+
+.tabInactive{
+    color: #9b9b9b;
+    background-color: #dedede;
 }
