--- a/src/components/pledge/Pledge.css
+++ b/src/components/pledge/Pledge.css
@@ -614,3 +614,140 @@ div.collateralTableExpanded div:nth-child(13){
 }
 
 /*** END ***/
+
+/* css for pop ups when clicked on assets--------------> */
+
+.boxed {
+  border-radius: 80px;
+  -moz-border-radius: 80px;
+  -webkit-border-radius: 5px;
+  padding: 5px 6px 5px 5px;
+  /*padding-top: 5px;*/
+
+  z-index: 1;
+  top:-5px; /* set top value */
+  left:30px; /* set left value */
+  width:120px;
+  border: 1px solid #1c2124;
+  display: none;
+  position: absolute;
+  background-color: #ffffff;
+}
+.boxed:before{
+  content: '';
+  display: block;
+  position: absolute;
+  right: 100%;
+  top: 20%;
+  margin-top: -10px;
+  border-top: 8px solid transparent;
+  border-right: 17px solid #000;
+  border-bottom: 8px solid transparent;
+  border-left: 11px solid transparent;
+}
+.boxed:after{
+  content: '';
+  display: block;
+  position: absolute;
+  right: 100%;
+  top: 20%;
+  margin-top: -10px;
+  border-top: 7px solid transparent;
+  border-right: 15px solid #ffffff;
+  border-bottom: 8px solid transparent;
+  border-left: 6px solid transparent;
+}
+
+
+.boxAllocate {
+  border-radius: 80px;
+  -moz-border-radius: 80px;
+  -webkit-border-radius: 5px;
+  padding: 5px 5px 5px 5px;
+  /*padding-top: 5px;*/
+
+  z-index: 2;
+  top:-80px; /* set top value */
+  left:-6px; /* set left value */
+  min-width:500px;
+  min-height:170px;
+  border: 1px solid #1c2124;
+  display: none;
+  position: absolute;
+  background-color: #ffffff;
+}
+
+.showBox{
+  display: block;
+}
+
+.relative{
+  position: relative;
+  cursor: pointer;
+}
+
+/* css for allocate asset pop up-------------->*/
+.popupAllocateRoot{
+  font:13px Helvetica;
+  padding: 0 5px;
+  /*margin-top: 12px;*/
+}
+
+.popupRow{
+  display:flex;
+  padding:5px 5px;
+}
+
+.popupText{
+  /*width: 145px;*/
+  align-content: flex-start;
+  flex: 2;
+  padding: 3px 0;
+  display: inline-block;
+}
+
+.popupInputBox{
+  /*width: 245px;*/
+  display: inline-block;
+  flex:3;
+  min-height: 40px;
+}
+
+.buttonContainer{
+  width: 100%;
+  padding-top: 10px;
+}
+.buttonContainer button {
+  float: right;
+  margin: 16px 24px;
+  width: 146px;
+  /*height: 32px;*/
+  color: #4A4A4A ;
+  background-color: #FAFAFA ;
+  border: 1px solid #979797 ;
+  font-size: 13px;
+  font-weight: bold;
+  line-height: 32px;
+  text-align: center;
+  -webkit-border-radius: 20px;
+  border-radius: 20px;
+  margin: 0 20px;
+  align-self: center;
+}
+
+.optButton.btnEnabled {
+  flex: 1;
+  width: 146px;
+  /*height: 32px;*/
+  color: #4A4A4A ;
+  background-color: #FAFAFA ;
+  border: 1px solid #979797 ;
+  font-size: 13px;
+  font-weight: bold;
+  line-height: 32px;
+  text-align: center;
+  -webkit-border-radius: 20px;
+  border-radius: 20px;
+  margin: 0 20px;
+  align-self: center;
+}
