--- a/src/components/Dropdown/Dropdown.css
+++ b/src/components/Dropdown/Dropdown.css
@@ -4,7 +4,7 @@
 .filterItem{
     display: inline-block;
     color: #494949;
-    width: 300px;
+    width: 100%;
     height: 30px;
     margin: 0px 0px;
     position: relative;
