--- a/src/components/Dropdown/Dropdown.css
+++ b/src/components/Dropdown/Dropdown.css
@@ -27,6 +27,7 @@
     -webkit-appearance: none;
     -moz-appearance:    none;
     appearance:         none;
+    overflow: hidden;
 }
 
 .filterItem .filters:focus{
