--- a/src/components/upload-portfolio/UploadWidget.css
+++ b/src/components/upload-portfolio/UploadWidget.css
@@ -2,6 +2,12 @@ div.componentStyle {
     margin-top: 1%;
     margin-left: 8%;
     margin-right: 8%;
+    /*width: 1260px;*/
+    /*height: 380px;*/
+    background-color: #FFFFFF;
+    box-shadow: 2px 3px 5px 0 rgba(0,0,0,0.5);
+    border-radius: 8px;
+    min-height: 410px;
 }
 
 .alignFileIconLeft {
@@ -52,4 +58,17 @@ div.componentStyle {
     border-radius: 20px;
     margin: 0 20px;
     align-self: center;
+}
+
+.widgetHeader{
+    width: 187px;
+    height: 29px;
+    font-family: Helvetica;
+    font-size: 24px;
+    font-weight: bold;
+    line-height: 29px;
+    color: #6389AD;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 10px;
 }
