--- a/src/static/react-dropzone/dropzone.css
+++ b/src/static/react-dropzone/dropzone.css
@@ -235,9 +235,10 @@
     cursor: pointer;
 }
 
-.dropzone.dz-started .dz-message {
-    display: none;
-}
+/* Not hiding the message */
+/*.dropzone.dz-started .dz-message {*/
+    /*display: none;*/
+/*}*/
 
 .dropzone.dz-drag-hover {
     border-style: solid;
@@ -258,6 +259,8 @@
     vertical-align: top;
     margin: 16px;
     min-height: 100px;
+    /*width of file icon*/
+    min-width: 80px;
 }
 
 .dropzone .dz-preview:hover {
@@ -307,15 +310,15 @@
 }
 
 .dropzone .dz-preview .dz-details {
-    z-index: 20;
-    position: absolute;
-    top: 0;
-    left: 0;
+    /*z-index: 20;*/
+    /*position: absolute;*/
+    /*top: 0;*/
+    /*left: 0;*/
     opacity: 0;
     font-size: 13px;
     min-width: 100%;
     max-width: 100%;
-    padding: 2em 1em;
+    /*padding: 2em 1em;*/
     text-align: center;
     color: rgba(0, 0, 0, 0.9);
     line-height: 150%;
@@ -328,6 +331,8 @@
 
 .dropzone .dz-preview .dz-details .dz-filename {
     white-space: nowrap;
+    /*width: 170px;*/
+    width: 190px;
 }
 
 .dropzone .dz-preview .dz-details .dz-filename:hover span {
@@ -397,9 +402,12 @@
     z-index: 500;
     position: absolute;
     display: block;
-    top: 50%;
-    left: 50%;
-    margin-left: -27px;
+    /*top: 50%;*/
+    /*left: 50%;*/
+    top: 0%;
+    left: 0%;
+    /*margin-left: -27px;*/
+    margin-left: 10px;
     margin-top: -27px;
 }
 
