--- a/src/static/react-dropzone/dropzone.css
+++ b/src/static/react-dropzone/dropzone.css
@@ -219,8 +219,16 @@
 .dropzone {
     min-height: 150px;
     border: 2px solid rgba(0, 0, 0, 0.3);
-    background: white;
     padding: 20px 20px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-image: url('../../../images/upload-portfolio/cloud_icon.png');
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+.dropzone.dz-started {
+    background: white;
 }
 
 .dropzone.dz-clickable {
