OW-97 Change styles

--- a/src/components/upload-portfolio/UploadWidget.css
+++ b/src/components/upload-portfolio/UploadWidget.css
@@ -58,6 +58,7 @@ div.componentStyle {
     border-radius: 20px;
     margin: 0 20px;
     align-self: center;
+    cursor: pointer;
 }
 
 .widgetHeader{
